[package]
name = "moove"
version = "0.2.6"
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.66"
description = "🚚 Manipulate file names and locations"
keywords = ["mv", "rename", "move"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"
homepage = "https://github.com/urin/moove"
repository = "https://github.com/urin/moove"
documentation = "https://github.com/urin/moove"

[dependencies]
anyhow = "1.0.68"
atty = "0.2.14"
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
edit = "0.1.4"
fs_extra = "1.3.0"
glob = "0.3.1"
natord = "1.0.9"
normpath = "1.1.0"
regex = "1.7.1"

[dev-dependencies]
serial_test = "1.0.0"

[lib]
doctest = false
