[package]
name = "moove"
version = "0.2.7"
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.71"
description = "🚚 Manipulate file names and locations"
keywords = ["mv", "rename", "move"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"
homepage = "https://github.com/urin/moove"
repository = "https://github.com/urin/moove"
documentation = "https://github.com/urin/moove"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
edit = "0.1.4"
fs_extra = "1.3.0"
glob = "0.3.1"
natord = "1.0.9"
normpath = "1.1.1"
regex = "1.10.2"

[dev-dependencies]
serial_test = "2.0.0"

[lib]
doctest = false
