[package]
name = "moove"
version = "0.4.3"
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.85.0"
description = "🚚 Manipulate file names and locations"
keywords = ["mv", "rename", "move"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"
homepage = "https://github.com/urin/moove"
repository = "https://github.com/urin/moove"
documentation = "https://github.com/urin/moove"

[workspace]
resolver = "2"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
allow-dirty = ["ci"]
installers = []
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-musl", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
unix-archive = ".tar.gz"
windows-archive = ".zip"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.2.0"
edit = "0.1.5"
fs_extra = "1.3.0"
glob = "0.3.3"
natord = "1.0.9"
normpath = "1.1.1"
regex = "1.12.2"
trash = "5.2.5"

[dev-dependencies]
serial_test = "2.0.0"

[lib]
doctest = false

[profile.dist]
inherits = "release"
lto = "thin"
